[metadata]
name = pandas-data-cleaner
version = 0.0.1
description = A package for aid with data cleaning using pandas.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Salaah Amin
url = https://github.com/Salaah01/pd-data-cleaner
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

install_requires =
    pandas >= 1.0


[options.packages.find]
exclude =
    tests